--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="/estilo.css">
+        <link rel="stylesheet" href="{{url_for('arquivos', path='estilo.css')}}">
 
         <!-- jQuery first, then Tether, then Bootstrap JS. -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="bloco-centrado">
-                            <a class="navbar-brand" href="/">Pagamentos SECOM</a>
+                            <a class="navbar-brand" href="{{url_for('sobre')}}">Pagamentos SECOM</a>
                             <ul class="nav navbar-nav float-right">
                             # for link, nome, atual in pagina_atual|paginas:
                                 <li class="nav-item{% if atual %} active{% endif %}">
