--- a/templates/maiores.html
+++ b/templates/maiores.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="bloco-centrado">
     <h2>Pagamentos para Maiores Fornecedores</h2>
-    <p>As linhas abaixo mostram quando foi pago para cada um dos {{n_maiores}} maiores fornecedores ao longo do tempo. Clicando no nome deles na legenda é possível escondê-los para melhor visualizar os restantes. {{aviso_grupos()}}</p>
+    <p>As linhas abaixo mostram quanto foi pago para cada um dos {{n_maiores}} maiores fornecedores ao longo do tempo. Clicando no nome deles na legenda é possível escondê-los para melhor visualizar os restantes. {{aviso_grupos()}}</p>
 </div>
 <div id="graf-ano"></div>
 <div id="graf-mes"></div>
