--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
+Bom, mandei esse e-mail mais para mostrar o site, ver se existe interesse nele
+e ver se vale a pena continuar atualizando, ou adicionando algumas
+funcionalidades.
+g
     <head>
         <!-- Required meta tags always come first -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-        <title>{% block title %}{% endblock %}Pagamentos SECOM</title>
+        <title>{% block title %}{% endblock %}Pagamentos SECOM - BETA!</title>
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
